# chessnut-maia-cli

./: .gitignore  README.md  pyproject.toml
docs/: maia-setup.md  troubleshooting.md
src/chessnut_maia_cli/: __init__.py  board.py  cli.py  engine.py  game.py
tests/: test_board_protocol.py  test_cli.py  test_engine.py  test_move_inference.py
