[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chessnut-maia-cli"
version = "0.1.0"
description = "CLI bridge for playing Maia2 and Maia3 on a Chessnut Go board over Bluetooth."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Dash1971" }]
dependencies = [
  "bleak>=0.22",
  "chess>=1.10",
  "typer>=0.12",
]
keywords = [
  "chess",
  "chessnut",
  "maia2",
  "maia3",
  "bluetooth-le",
  "uci",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Board Games",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
chessnut-maia = "chessnut_maia_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chessnut_maia_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"
